Feature/heroku config (#8)
* Update Gopkg.toml

* Run on $PORT variable

* Change Heroku Go version

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -32,3 +32,9 @@
 [prune]
   go-tests = true
   unused-packages = true
+
+[metadata.heroku]
+  root-package = "github.com/gdlroutes/api"
+  go-version = "1.11"
+  install = [ "./cmd/..." ]
+  ensure = true
